--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@circle-fin/w3s-pw-web-sdk": "^1.1.11",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
-    "ethers": "^6.8.0",
+    "dotenv": "^17.2.3",
+    "ethers": "^6.15.0",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.294.0",
     "next": "^14.0.0",
     "node-forge": "^1.3.1",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
@@ -42,8 +44,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^13.4.0",
-    "@types/node": "^20.8.0",
+    "@types/node": "^20.19.25",
     "@types/node-forge": "^1.3.14",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "@types/uuid": "^9.0.0",
