Configure Vercel deployment
- Updated vercel.json for production deployment
- Updated .gitignore to exclude Vercel files
- Successfully deployed to Vercel with environment variables
- Production URL: https://arc-cross-chain-jbqn7yg8h-sivakalathi-gmailcoms-projects.vercel.app

--- a/vercel.json
+++ b/vercel.json
@@ -4,17 +4,5 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "env": {
-    "CIRCLE_API_KEY": "@circle_api_key",
-    "CIRCLE_CLIENT_KEY": "@circle_client_key",
-    "CIRCLE_ENTITY_SECRET": "@circle_entity_secret",
-    "CIRCLE_BASE_URL": "https://api.circle.com",
-    "DATABASE_URL": "@database_url"
-  },
-  "build": {
-    "env": {
-      "NEXT_PUBLIC_APP_URL": "https://arc-cross-chain-wallet.vercel.app"
-    }
-  }
+  "regions": ["iad1"]
 }
